# hopsworks-sdk

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
crates/hopsworks-api/: Cargo.toml
crates/hopsworks-api/src/: lib.rs  polars.rs  python.rs
crates/hopsworks-api/src/blocking/: feature_group.rs  feature_store.rs  feature_view.rs  job_execution.rs  mod.rs  project.rs
crates/hopsworks-api/src/core/: mod.rs
crates/hopsworks-api/src/feature_store/: mod.rs
crates/hopsworks-api/src/feature_store/feature_group/: feature.rs  mod.rs  statistics_config.rs
crates/hopsworks-api/src/feature_store/feature_view/: mod.rs  training_dataset.rs  training_dataset_builder.rs  transformation_function.rs
crates/hopsworks-api/src/feature_store/query/: filter.rs  join.rs  mod.rs
crates/hopsworks-api/src/kafka/: mod.rs
crates/hopsworks-api/src/minimal/: mod.rs
crates/hopsworks-api/src/offline_store/: mod.rs
crates/hopsworks-api/src/online_store/: mod.rs  read_rest.rs  rest_read.rs
crates/hopsworks-api/src/opensearch/: mod.rs
crates/hopsworks-api/src/platform/: job.rs  job_execution.rs  project.rs  user.rs
crates/hopsworks-base/: Cargo.toml
crates/hopsworks-base/src/: lib.rs  rest_client.rs
crates/hopsworks-base/src/credentials/: controller.rs  service.rs
crates/hopsworks-base/src/profiles/: read.rs
crates/hopsworks-base/src/project/: controller.rs
crates/hopsworks-cli/: Cargo.toml
crates/hopsworks-cli/src/: job.rs  main.rs  project.rs  subcommands.rs
crates/hopsworks-cli/src/feature_store/: feature_group.rs  feature_view.rs  mod.rs
crates/hopsworks-cli/src/platform/: job.rs  mod.rs  project.rs
crates/hopsworks-core/: Cargo.toml
crates/hopsworks-core/src/: lib.rs  rest_client.rs  util.rs
crates/hopsworks-core/src/cluster_api/: mod.rs  rest_client.rs
crates/hopsworks-core/src/cluster_api/feature_store/: mod.rs
crates/hopsworks-core/src/feature_store/: mod.rs
crates/hopsworks-core/src/platform/: file_system.rs  job.rs  job_execution.rs  kafka.rs  mod.rs  project.rs  user.rs
crates/hopsworks-core/src/profiles/: mod.rs  read.rs
crates/hopsworks-fs/: Cargo.toml
crates/hopsworks-fs/src/: lib.rs
crates/hopsworks-fs/src/cluster_api/: service.rs
crates/hopsworks-fs/src/core/: feature.rs  feature_group.rs  feature_view.rs  mod.rs  query.rs  storage_connector.rs  training_dataset.rs  transformation_function.rs
crates/hopsworks-insert/: Cargo.toml
crates/hopsworks-insert/src/: helper.rs  insert.rs  kafka_producer.rs  lib.rs  mod.rs  polars_insert.rs
crates/hopsworks-internal/: Cargo.toml
crates/hopsworks-internal/src/: lib.rs  rest_client.rs
crates/hopsworks-internal/src/feature_store/: mod.rs  service.rs
crates/hopsworks-internal/src/platform/: mod.rs
crates/hopsworks-internal/src/profiles/: mod.rs
crates/hopsworks-kafka/: Cargo.toml
crates/hopsworks-kafka/src/: helper.rs  insert.rs  kafka_configuration.rs  kafka_producer.rs  lib.rs  polars_row_to_avro.rs  produce_polars_df.rs
crates/hopsworks-offline-store/: Cargo.toml
crates/hopsworks-offline-store/src/: lib.rs
crates/hopsworks-offline-store/src/arrow_flight/: arrow_polars.rs  client.rs  filter.rs  mod.rs  payloads.rs  utils.rs
crates/hopsworks-offline-store/src/cluster_api/: mod.rs  payloads.rs
crates/hopsworks-offline-store/src/read/: feature_group.rs  feature_view.rs  flight_query_builder.rs  flight_to_polars.rs  flight_to_record_batch.rs  mod.rs  query.rs  read_options.rs  training_dataset.rs
crates/hopsworks-online-store/: Cargo.toml
crates/hopsworks-online-store-rest/: Cargo.toml
crates/hopsworks-online-store-rest/src/: client.rs  controller.rs  entities.rs  lib.rs  payload.rs  rest_read_options.rs  rondb_feature_store_api.rs
crates/hopsworks-online-store-sql/: Cargo.toml
crates/hopsworks-online-store-sql/src/: lib.rs
crates/hopsworks-online-store-sql/src/mysql2arrow/: constants.rs  mod.rs  mysql_arrow.rs  mysql_arrowstream.rs  mysql_polars_arrow.rs
crates/hopsworks-online-store-sql/src/read/: mod.rs  read_to_arrow.rs  read_to_polars.rs
crates/hopsworks-online-store/src/: entities.rs  lib.rs
crates/hopsworks-online-store/src/rondb_rest/: client.rs  controller.rs  entities.rs  mod.rs  payload.rs  rondb_feature_store_api.rs
crates/hopsworks-online-store/src/sql/: mod.rs  read_to_arrow.rs  read_to_polars.rs
crates/hopsworks-online-store/src/sqlx_feature_vector/: mod.rs
crates/hopsworks-opensearch/: Cargo.toml
crates/hopsworks-opensearch/src/: lib.rs
crates/hopsworks-opensearch/src/vector_db/: mod.rs  payload.rs  service.rs
crates/hopsworks-python/: Cargo.toml
crates/hopsworks-python/src/: feature_store.rs  lib.rs  platform.rs
crates/hopsworks-python/src/feature_store/: feature_group.rs  feature_store.rs  feature_view.rs  mod.rs  query.rs
crates/hopsworks-python/src/platform/: job.rs  job_execution.rs  mod.rs  project.rs
crates/hopsworks-rest-online-store/: Cargo.toml
crates/hopsworks-rest-online-store/src/: client.rs  entities.rs  lib.rs  payload.rs  rondb_feature_store_api.rs
crates/hopsworks-rs/: Cargo.toml
crates/hopsworks-rs/src/: lib.rs
crates/hopsworks-rs/src/platform/: job.rs  job_execution.rs  project.rs
crates/hopsworks-utils/: Cargo.toml
crates/hopsworks-utils/src/: hopsworks_configs.rs  lib.rs
crates/py-hopsworks/: Cargo.toml
crates/py-hopsworks/hopsworks_sdk/: __init__.py  embedding_feature.py  embedding_index.py  feature_group.py  feature_store.py  feature_view.py  job.py  job_execution.py  project.py  query.py  storage_connector.py
crates/py-hopsworks/hopsworks_sdk/feature_store/: embedding_feature.py  embedding_index.py  feature_group.py  feature_store.py  feature_view.py  query.py  training_dataset.py
crates/py-hopsworks/hopsworks_sdk/platform/: project.py
crates/py-hopsworks/src/: lib.rs
crates/py-hopsworks/src/feature_store/: embedding_feature.rs  embedding_index.rs  feature_group.rs  feature_view.rs  mod.rs  query.rs  storage_connector.rs  training_dataset.rs
crates/py-hopsworks/src/platform/: job.rs  job_execution.rs  mod.rs  project.rs
(+401 files in other folders)
