[workspace.package]
publish = false
version = "0.0.1"
authors = ["Victor Jouffrey <vicatjou@gmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/vatj/hopsworks-rs"

[workspace]
resolver = "2"
members = ["crates/*"]


[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive", "rc"] }
color-eyre = { version = "0.6" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
tokio = { version = "1.33", features = ["full"] }
