[build-system]
build-backend = "maturin"
requires = ["maturin>=1.3.2,<2.0.0"]

[project]
authors = [
    {name = "Hopsworks AB", email = "info@hopsworks.ai"}, 
    {name = "Victor Jouffrey", email = "vicatjou@gmail.com"}
]
dependencies = [
    "asyncio>=3.4.3",
    "toml>=0.10.2",
]
name = "hopsworks-sdk"
maintainers = [
    {name = "Victor Jouffrey", email = "vicatjou@gmail.com"}
]
description = "Python SDK to interact with Hopsworks Platform, Feature Store and Model Registry"
license = { file = "LICENSE" }
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
documentation = "https://docs.hopsworks.ai"
repository = "https://github.com/vatj/hopsworks-rs"
homepage = "https://www.hopsworks.ai/"

[tool.rye]
# virtual = true
managed = true
dev-dependencies = [
    "pip>=24.0",
]

[tool.rye.workspace]
members = ["python"]

[tool.maturin]
python-source = "python"
module-name = "hopsworks_sdk.hopsworks_rs"
features = ["pyo3/extension-module"]
manifest-path = "crates/hopsworks-python/Cargo.toml"
