[build-system]
build-backend = "maturin"
requires = ["maturin>=1.3.2,<2.0.0"]

[project]
authors = [
    {name = "Hopsworks AB", email = "info@hopsworks.ai"}, 
    {name = "Victor Jouffrey", email = "vicatjou@gmail.com"}
]
dependencies = [
    "toml>=0.10.2",
    "polars>=0.20.31",
    "pyarrow>=16.1.0",
    "rich>=0.13",
]
name = "hopsworks-sdk"
maintainers = [
    {name = "Victor Jouffrey", email = "vicatjou@gmail.com"}
]
description = "Python SDK to interact with Hopsworks Platform, Feature Store and Model Registry"
license = { file = "LICENSE" }
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
documentation = "https://docs.hopsworks.ai"
repository = "https://github.com/vatj/hopsworks-rs"
homepage = "https://www.hopsworks.ai/"

[tool.rye]
# virtual = true
managed = true
dev-dependencies = [
    "pip>=24.0",
    "ipykernel>=6.0",   
]

[tool.rye.workspace]
members = ["python"]

[tool.maturin]
python-source = "crates/py-hopsworks"
module-name = "hopsworks_sdk.hopsworks_rs"
features = ["pyo3/extension-module"]
manifest-path = "crates/py-hopsworks/Cargo.toml"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "java",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8+ syntax.
target-version = "py38"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "I", "W"] #, "ANN"]
ignore = [
    "B905",   # zip has no strict kwarg until Python 3.10
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "ANN003", # Missing type annotation for **kwarg in function
    "ANN002", # Missing type annotation for *args in function
    "ANN401", # Allow Any in type annotations
    "W505",   # Doc line too long
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
lines-after-imports = 2
known-third-party = ["hopsworks_sdk", "hopsworks_rs"]


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
