[package]
name = "hopsworks-api"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
color-eyre = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
hopsworks-core ={ workspace = true }
serde = { workspace = true }

polars = { workspace = true , optional = true}
arrow = { workspace = true , optional = true}
reqwest = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true}

hopsworks-kafka ={ workspace = true, optional = true}
hopsworks-offline-store = { workspace = true, optional = true}
hopsworks-online-store-sql = { workspace = true, optional = true}
hopsworks-online-store-rest = { workspace = true, optional = true}


[features]
polars = ["dep:polars"]
arrow = ["dep:arrow"]
read_arrow_flight_offline_store = ["hopsworks-offline-store", "polars", "arrow"]
read_rest_online_store = ["hopsworks-online-store-rest", "reqwest", "indexmap"]
read_sql_online_store = ["hopsworks-online-store-sql"]
insert_into_kafka = ["hopsworks-kafka"]
blocking = []
