[package]
name = "hopsworks-base"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
serde ={ workspace = true , features = ["derive"] }
directories = { version = "5.0" }
toml = { version = "0.8" }

reqwest = { version = "0.12", features = ["json", "native-tls", "stream"] }