[package]
name = "hopsworks-cli"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

hopsworks-utils = { path = "../hopsworks-utils" }
