[package]
name = "hopsworks-cli"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }

hopsworks-base = { path = "../hopsworks-base" }
hopsworks-platform = { path = "../hopsworks-platform" }
hopsworks-fs = { path = "../hopsworks-fs" }