[package]
name = "hopsworks-cli"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = { workspace = true }
tokio = { workspace = true }
env_logger = { version = "0.11" }
tracing = { workspace = true }

hopsworks-core = { workspace = true}

[[bin]]
name = "hopsworks"
path = "src/main.rs"