[package]
name = "hopsworks-core"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
polars ={ workspace = true, optional = true}
tracing = { workspace = true }


typed-builder = { version = "0.20.0" }
indicatif = { version = "0.17" }
chrono ={ version = "0.4", features = ["serde"] }
toml = { version = "0.8" }
directories = { version = "5.0" }

[features]
default = ["polars"]
polars = ["dep:polars"]

