[package]
name = "hopsworks-fs"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { workspace = true }
serde = { version = "1.0", features = ["derive", "rc"] }