[package]
name = "hopsworks-fs"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { workspace = true }
color-eyre ={ workspace = true }
serde = { workspace = true }

hopsworks-base = { path = "../hopsworks-base" }
hopsworks-platform ={ path = "../hopsworks-platform" }