[package]
name = "hopsworks-kafka"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
color-eyre = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"]}
futures = { version = "0.3"}
polars = { workspace = true, features = [
    "default",
    "simd",
    "performant",
    "lazy",
    "strings",
    "dtype-full",
    "rows",
    "timezones",
] }


hopsworks-core = { workspace = true }

polars-arrow = {version = "0.41", features = ["io_avro"]}
rayon = { version = "*" }

rdkafka = { version = "0.36.2", features = ["tokio", "libz", "ssl"] }