[package]
name = "hopsworks-offline-store"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
color-eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
hopsworks-internal = { workspace = true }

arrow-format = { version = "0.8.1", features = [
    "flight-data",
    "flight-service",
] }
arrow2 = { version = "0.18", features = ["io_flight", "default", "arrow"] }
arrow-schema = { version = "51.0.0" }
arrow-ipc = { version = "51.0.0" }
arrow-flight = { version = "51.0.0" }
tonic = { version = "0.11", features = ["transport", "tls"] }
ahash = { version = "0.8.6" }
bytes = { version = "1.5.0" }
futures = { version = "0.3" }