[package]
name = "hopsworks-offline-store"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
color-eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
polars ={ workspace = true }
hopsworks-core = { workspace = true }
serde ={ workspace=true, features = ["derive"] }
serde_json = { version = "1.0" }
polars-arrow ={ version = "0.41", features = ["arrow_rs"] }
polars-core = { version = "0.41"}
arrow = { workspace = true}
arrow-flight = { version = "52"}
tonic = { version = "0.11", features = ["transport", "tls"] }
ahash = { version = "0.8.6" }
bytes = { version = "1.5.0" }
futures = { version = "0.3" }


[features]
arrow_flight = []
polars = []