[package]
name = "hopsworks-offline-store"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
color-eyre = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
polars ={ workspace = true }
hopsworks-core = { workspace = true }
serde ={ workspace=true, features = ["derive"] }
serde_json = { workspace = true }
polars-arrow ={ version = "0.41", features = ["arrow_rs"] }
polars-core = { version = "0.41"}
arrow = { workspace = true}
arrow-flight = { version = "52"}
tonic = { version = "0.11", features = ["transport", "tls"] }
ahash = { version = "0.8" }
bytes = { version = "1.7" }
futures = { version = "0.3" }


[features]
arrow_flight = []
polars = []