[package]
name = "hopsworks-online-store"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
color-eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

hopsworks-core = { workspace = true }

connectorx = { version = "0.3.3", optional = true}
polars = { workspace = true, optional = true}
arrow = { workspace = true, optional = true}

# Used by connectorx source code
chrono ={ workspace = true, optional = true}
serde_json = { workspace = true, optional = true}
thiserror = { version = "*", optional = true}
num_traits ={ version = "*", optional = true}
rust_decimal ={ version = "*", optional = true}
fehler ={ version = "*", optional = true}
anyhow ={ version = "*", optional = true}
sql_parser ={ version = "*", optional = true}

# Used by connectorx source for mysql source
r2d2 ={ version = "0.8", optional = true}
r2d2_mysql = {version = "0.25", optional = true}



[features]
connectorx = ["dep:connectorx"]
connectorx_explicit = ["dep:serde_json", "dep:chrono", "dep:rust_decimal", "dep:thiserror", "dep:num_traits", "dep:fehler", "dep:sql_parser", ]
connectorx_sql_outdated = ["dep:r2d2", "dep:r2d2_mysql"]
sql = ["sql2arrow"]
sql2arrow = ["connectorx", "connectorx_sql_outdated", "connectorx_explicit", "dep:arrow"]
# sql2polars = ["dep:connectorx", "dep:polars"]
rest2polars = ["dep:reqwest"]