[package]
name = "hopsworks-online-store"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
color-eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }

hopsworks-core = { workspace = true }

connectorx = { version = "0.3.3", optional = true}
polars = { workspace = true, optional = true}
arrow = { workspace = true, optional = true}

# Used by connectorx source code
chrono ={ workspace = true, optional = true, features = ["serde"]}
serde_json = { workspace = true, optional = true}
thiserror = { version = "*", optional = true}
num-traits ={ version = "*", optional = true}
rust_decimal ={ version = "*", optional = true}
sqlparser ={ version = "0.37.0", optional = true}

# Used by connectorx source code for mysql source
r2d2 = { version = "0.8", optional = true}
r2d2_mysql = {version = "24.0", optional = true }
mysql = { version = "*", optional = true}
mysql_common = {version = "0.30.6", features = ["chrono"], optional = true}

# Used by connectorx source code for arrow destination
fehler ={ version = "*", optional = true}
anyhow ={ version = "*", optional = true}
itertools = { version = "*", optional = true}



[features]
connectorx = ["dep:connectorx"]
connectorx_explicit = ["dep:serde_json", "dep:chrono", "dep:rust_decimal", "dep:thiserror", "dep:num-traits",  "dep:sqlparser"]
connectorx_sql_outdated = ["dep:r2d2", "dep:r2d2_mysql", "dep:mysql", "dep:mysql_common"]
connectorx_arrow = ["dep:arrow", "dep:fehler", "dep:anyhow", "dep:itertools"]
sql = ["sql2arrow"]
sql2arrow = ["connectorx", "connectorx_sql_outdated", "connectorx_explicit", "connectorx_arrow"]
# sql2polars = ["dep:connectorx", "dep:polars"]
rest2polars = ["dep:reqwest"]