[package]
name = "hopsworks-sdk"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
hopsworks-api = { workspace = true, features = ["read_arrow_flight_offline_store", "insert_into_kafka"]}
lazy_static = { version = "1.4" }
tokio = { version = "1.0", features = ["full"] }
pyo3 = { version = "0.21", features = ["extension-module", "experimental-async", "eyre", "abi3-py38"] }
pyo3-log = { version = "0.10" }
pyo3-polars = { version = "0.15.0"}
log = {workspace = true}
color-eyre = {workspace = true}

# Maker optional with feature flags
polars = { workspace = true }
arrow = { workspace = true, features = ["pyarrow"]}

[lib]
crate-type = ["cdylib"]
name = "hopsworks_sdk"
