[package]
name = "hopsworks"
description = "Hopsworks SDK for Rust leveraging Polars DataFrames to build blazing fast and reliable feature pipelines for your ML/AI services."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "../../README.md"
keywords = ["hopsworks", "mlops", "featurestore"]


[dependencies]
tokio = { workspace = true }
connectorx = { version = "0.3.2", features = [
    "src_mysql",
    "dst_arrow2",
    "dst_arrow",
] }
arrow-format = { version = "0.8.1", features = [
    "flight-data",
    "flight-service",
] }
arrow2 = { version = "0.17", features = ["io_flight", "default", "arrow"] }
reqwest = { version = "0.11", features = ["json", "native-tls", "stream"] }
serde_json = { version = "1.0" }
apache-avro = { version = "0.16", features = ["derive"] }
polars = { version = "0.32.1", features = [
    "lazy",
    "avro",
    "strings",
    "dtype-full",
    "rows",
    "dynamic_groupby",
    "timezones",
] }
serde = { workspace = true }
rdkafka = { version = "0.36.0", features = ["tokio", "libz", "ssl"] }
indicatif = { version = "0.17" }
arrow-schema = { version = "48.0.0" }
arrow-ipc = { version = "48.0.0" }
chrono = { version = "0.4" }
arrow-flight = { version = "48.0.0" }
tonic = { version = "0.10.2", features = ["transport", "tls"] }
futures = { version = "0.3" }
bytes = { version = "1.5.0" }
ahash = { version = "0.8.6" }

# Debug and Error handling related dependencies
anyhow = { version = "1.0" }
color-eyre = { workspace = true }
log = { workspace = true }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
env_logger = { workspace = true }

[[example]]
name = "fraud_batch_feature_pipeline"
path = "../../examples/fraud_batch/fraud_batch_feature_pipeline.rs"

[[example]]
name = "fraud_batch_training_pipeline"
path = "../../examples/fraud_batch/fraud_batch_training_pipeline.rs"

[[example]]
name = "fraud_batch_dev"
path = "../../examples/fraud_batch/fraud_batch_dev.rs"

[[example]]
name = "basic_stream_feature_group"
path = "../../examples/snippets/basic_stream_feature_group.rs"

[[example]]
name = "read_fg_arrow_flight"
path = "../../examples/snippets/read_fg_arrow_flight.rs"

[[example]]
name = "read_fg_online"
path = "../../examples/snippets/read_fg_online.rs"
