[package]
name = "hopsworks-sdk"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
hopsworks-api = { workspace = true, features = ["polars"]}
pyo3 = { version = "0.21", features = ["extension-module", "experimental-async", "eyre", "abi3-py38"] }
pyo3-log = { version = "0.11" }
pyo3-polars = { version = "0.15.0"}
tracing = { workspace = true }
console-subscriber = { workspace = true }
log = {workspace = true}
color-eyre = {workspace = true}

# Maker optional with feature flags
polars = { workspace = true }
arrow = { workspace = true, features = ["pyarrow"]}

[lib]
crate-type = ["cdylib"]
name = "hopsworks_sdk"

[features]
default = ["hopsworks-api/blocking", "read_arrow_flight_offline_store", "insert_into_kafka", "read_sql_online_store", "read_rest_online_store"]
read_arrow_flight_offline_store = ["hopsworks-api/read_arrow_flight_offline_store"]
insert_into_kafka = ["hopsworks-api/insert_into_kafka"]
read_sql_online_store = ["hopsworks-api/read_sql_online_store"]
read_rest_online_store = ["hopsworks-api/read_rest_online_store"]
